feat: add endpoint to get positions for all funds
